# slaterlib

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
pkgconfig/: slaterlib.pc.in
src/: .gitignore  Makefile  core.c  debug.c  debug.h  simple.c  slater_condon.c  slater_condon.h  slater_condon_simple.h  test.c
